# etop

./: .gitignore  Cargo.toml  Dockerfile  LICENSE-MIT  README.md  rustfmt.toml
crates/etop/: Cargo.toml
crates/etop-cli/: Cargo.toml
crates/etop-cli/src/: args.rs  main.rs
crates/etop-cli/src/commands/: dataframe_command.rs  dataset_command.rs  mod.rs  number_command.rs  print_command.rs  tui_command.rs
crates/etop-core/: Cargo.toml
crates/etop-core/src/: lib.rs
crates/etop-core/src/datasets/: blocks.rs  cryo_dataset.rs  erc20_transfers_by_erc20.rs  erc721_transfer_by_erc721.rs  mod.rs  transactions_by_to_address.rs
crates/etop-core/src/types/: dataframes.rs  dataspecs.rs  exceptions.rs  mod.rs  query.rs  ui.rs  warehouse.rs  windows.rs
crates/etop-format/: Cargo.toml
crates/etop-format/src/: exceptions.rs  lib.rs
crates/etop-format/src/binary_format/: builder.rs  mod.rs  types.rs
crates/etop-format/src/bool_format/: mod.rs  types.rs  types_tests.rs
crates/etop-format/src/number_format/: README.md  builder.rs  interface.rs  process.rs  str_convert.rs  types.rs  types_tests.rs
crates/etop-format/src/string_format/: mod.rs  types.rs  types_tests.rs
crates/etop-format/src/table_formats/: cell_format.rs  column_format.rs  dataframe_format.rs  unknown_format.rs
crates/etop-tui/: Cargo.toml  README.md  build.rs
crates/etop-tui/src/: action.rs  app.rs  components.rs  config.rs  lib.rs  tui.rs  utils.rs
crates/etop-tui/src/components/: body.rs  header.rs  home.rs
crates/etop/src/: cli.rs  main.rs  table_view.rs  tui.rs
crates/etop/src/cli/: args.rs  dataframe_command.rs  dataset_command.rs  mod.rs  number_command.rs
crates/etop/src/cli/commands/: dataframe_command.rs  dataset_command.rs  mod.rs  number_command.rs
crates/etop/src/datasets/: blocks.rs  erc20_transfers_by_erc20.rs  mod.rs  transactions_by_to_address.rs
crates/etop/src/dfs/: cli.rs  format.rs  mod.rs  types.rs  view.rs
crates/etop/src/dfs/datasets/: mod.rs  transactions_by_to_address.rs
crates/etop/src/pipeline/: collect.rs  mod.rs
crates/etop/src/types/: dataframes.rs  datasets.rs  dataspecs.rs  exceptions.rs  mod.rs  pipeline.rs  ui.rs  warehouse.rs
crates/etop/src/types/formats/: cell_format.rs  column_format.rs  dataframe_format.rs  mod.rs  unknown_format.rs
crates/toolstr/: Cargo.toml
crates/toolstr/src/: exceptions.rs  format_number.rs  lib.rs  main.rs
crates/toolstr/src/binary_format/: builder.rs  types.rs  types_tests.rs
crates/toolstr/src/bool_format/: builder.rs
crates/toolstr/src/format_num/: README.md  interface.rs  mod.rs  process.rs  str_convert.rs  types.rs  types_from_str.rs  types_tests.rs
crates/toolstr/src/number_format/: builder.rs  interface.rs  mod.rs  process.rs  str_convert.rs  types.rs  types_tests.rs
crates/toolstr/src/string_format/: builder.rs  types.rs
src/: main.rs
