
[workspace]
members = ["crates/toolstr", "crates/etop"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/paradigmxyz/etop"
repository = "https://github.com/paradigmxyz/etop"
exclude = [".github/"]

[workspace.dependencies]
polars = { version = "0.35.0", features = [
    "parquet",
    "string_encoding",
    "polars-lazy",
    "lazy",
    "binary_encoding",
    "json",
    "dtype-struct",
] }

