
[workspace]
members = ["crates/etop-cli", "crates/etop-core", "crates/etop-format", "crates/etop-tui"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/paradigmxyz/etop"
repository = "https://github.com/paradigmxyz/etop"
exclude = [".github/"]

[workspace.dependencies]
cryo_freeze = { path = "/Users/stormslivkoff/repos/cryo/crates/freeze" }
polars = { version = "0.35.4", features = [
    "parquet",
    "string_encoding",
    "polars-lazy",
    "lazy",
    "binary_encoding",
    "json",
    "dtype-struct",
    "mode",
] }
tokio = { version = "1.32.0", features = ["full"] }
