[package]
name = "etop-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "etop"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
cryo_freeze = { workspace = true }
etop-core = { version = "0.1.0", path = "../etop-core" }
etop-tui = { version = "0.1.0", path = "../etop-tui" }
term_size = { workspace = true }
tokio = { workspace = true }
