[package]
name = "etop-cli"
description = "etop-cli is cli of etop"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "etop"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
cryo_freeze = { workspace = true }
etop-core = { version = "0.1.1", path = "../etop-core" }
etop-tui = { version = "0.1.1", path = "../etop-tui" }
term_size = { workspace = true }
tokio = { workspace = true }
