[package]
name = "etop-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cryo_freeze = { workspace = true }
glob = "0.3.1"
polars = { workspace = true }
etop-format = { version = "0.1.0", path = "../etop-format" }
