[package]
name = "etop-core"
description = "etop-core contains the core types and datasets of etop"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
cryo_cli = { workspace = true }
cryo_freeze = { workspace = true }
etop-format = { version = "0.1.0", path = "../etop-format" }
glob = "0.3.1"
polars = { workspace = true }
