[package]
name = "etop-format"
description = "etop-format contains functions for fomatting data into strings"
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
chrono = "0.4.31"
polars = { workspace = true }
regex = "1.3.6"
unicode-truncate = "0.2.0"
