[package]
name = "etop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
color-eyre = "0.6.2"
crossterm = { version = "0.27.0", features = ["event-stream"] }
cryo_freeze = { path = "/Users/stormslivkoff/repos/cryo/crates/freeze" }
futures = "0.3.28"
polars = { workspace = true }
ratatui = { version = "0.24.0", features = ["serde", "macros"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.9"
toolstr = { version = "0.1.0", path = "../toolstr" }
